tests/ui/dep-graph/dep-graph-struct-signature.stderr
error: no path from `WillChange` to `type_of`
  --> $DIR/dep-graph-struct-signature.rs:29:5
   |
LL |     #[rustc_then_this_would_need(type_of)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: no path from `WillChange` to `associated_item`
  --> $DIR/dep-graph-struct-signature.rs:30:5
   |
LL |     #[rustc_then_this_would_need(associated_item)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: no path from `WillChange` to `trait_def`
  --> $DIR/dep-graph-struct-signature.rs:31:5
   |
LL |     #[rustc_then_this_would_need(trait_def)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:37:5
   |
LL |     #[rustc_then_this_would_need(fn_sig)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:38:5
   |
LL |     #[rustc_then_this_would_need(typeck)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:41:5
   |
LL |     #[rustc_then_this_would_need(fn_sig)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:42:5
   |
LL |     #[rustc_then_this_would_need(typeck)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:47:5
   |
LL |     #[rustc_then_this_would_need(type_of)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:54:5
   |
LL |     #[rustc_then_this_would_need(type_of)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:62:9
   |
LL |         #[rustc_then_this_would_need(type_of)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:64:9
   |
LL |         #[rustc_then_this_would_need(type_of)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: no path from `WillChange` to `type_of`
  --> $DIR/dep-graph-struct-signature.rs:69:5
   |
LL |     #[rustc_then_this_would_need(type_of)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: no path from `WillChange` to `type_of`
  --> $DIR/dep-graph-struct-signature.rs:76:5
   |
LL |     #[rustc_then_this_would_need(type_of)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: no path from `WillChange` to `fn_sig`
  --> $DIR/dep-graph-struct-signature.rs:82:5
   |
LL |     #[rustc_then_this_would_need(fn_sig)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: no path from `WillChange` to `fn_sig`
  --> $DIR/dep-graph-struct-signature.rs:85:5
   |
LL |     #[rustc_then_this_would_need(fn_sig)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: no path from `WillChange` to `typeck`
  --> $DIR/dep-graph-struct-signature.rs:86:5
   |
LL |     #[rustc_then_this_would_need(typeck)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:33:9
   |
LL |         #[rustc_then_this_would_need(fn_sig)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: no path from `WillChange` to `fn_sig`
  --> $DIR/dep-graph-struct-signature.rs:78:9
   |
LL |         #[rustc_then_this_would_need(fn_sig)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:49:9
   |
LL |         #[rustc_then_this_would_need(fn_sig)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:50:9
   |
LL |         #[rustc_then_this_would_need(typeck)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:56:9
   |
LL |         #[rustc_then_this_would_need(fn_sig)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: OK
  --> $DIR/dep-graph-struct-signature.rs:57:9
   |
LL |         #[rustc_then_this_would_need(typeck)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 22 previous errors

